--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -1,14 +1,7 @@
 // search bar
-#nav-search-wrapper {
-  position: relative;
-  top: -53px;
-  left: 160px;
-  width: 30vw;
-  padding: 0;
-  margin-top: 0;
-  z-index: 100;
-  box-sizing: content-box;
-  text-size-adjust: none;
+#nav-search-bar {
+  margin-left: 46px;
+  width: 100%;
 }
 
 .inline-input {
@@ -18,6 +11,7 @@
   font-family: $headers-font;
   font-weight: lighter;
   font-size: 14px;
+  width: 100%;
 }
 
 #nav-search-query {
@@ -34,32 +28,3 @@
   border-top-left-radius: 0;
   border-top-right-radius: 6px;
 }
-
-
-// #nav-search-bar {
-//   position: relative;
-//   top: -53px;
-//   left: 160px;
-//   font-family: $headers-font;
-//   font-weight: lighter;
-//   font-size: 14px;
-//   z-index: 100;
-
-//   .input-group {
-//     width: 32vw;
-//   }
-
-//   #search-query {
-//     border-bottom-left-radius: 6px;
-//     border-bottom-right-radius: 0;
-//     border-top-left-radius: 6px;
-//     border-top-right-radius: 0;
-//   }
-
-//   #search-submit {
-//     border-bottom-left-radius: 0;
-//     border-bottom-right-radius: 6px;
-//     border-top-left-radius: 0;
-//     border-top-right-radius: 6px;
-//   }
-// }
