--- a/app/assets/stylesheets/pages/_show-job.scss
+++ b/app/assets/stylesheets/pages/_show-job.scss
@@ -1,22 +1,13 @@
-// .grid {
-//   display: grid;
-//   grid-template-columns: 1fr 1fr;
-//   grid-template-rows: 1fr 1fr;
-
 .supplier {
-  // grid-row: 1 / span 2;
-  // grid-column: 1 / span 1;
   display: flex;
-  justify-content: flex-start;
+  // justify-content: center;
   align-items: center;
 }
 .status {
-  // grid-row: 1 / span 1;
-  // grid-column: 2 / span 1;
+
 }
 .conversation {
-  // grid-row: 2 / span 1;
-  // grid-column: 2 / span 1;
+
 }
 
 .new-msg {
